Fixing weather routes to get data
